# TA3D

./: .cdtproject  .gitignore  3dmeditor  3dmeditor.desktop  3dmeditor.res  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  NEWS  README  TA3D.kdevelop  TA3D.kdevses  TODO  aclocal.m4  cmake_mingw32.sh  config.h  config.h.cmake  config.h.in  config.status  config_mingw32.sh  configure  configure.ac  install-sh  intro.txt  mkinstalldirs  readme.html  readme_fr.html  ta3d  ta3d.hpi  ta3d.res  toolchain-mingw32.cmake
branches/mili-branch/src/: 3dmeditor.cpp  3dmeditor.h  3dmeditor_sub.cpp  3do.cpp  3do.h  3ds.h  CMakeLists.txt  Doxyfile.txt  EngineClass.cpp  EngineClass.h  SocketClass.cpp  TA3D.vcproj  TA3D_Audio.cpp  TA3D_Audio.h  TA3D_Exception.cpp  TA3D_Exception.h  TA3D_NameSpace.cpp  TA3D_NameSpace.h  TA3D_Network.cpp  TA3D_Network.h  TA3D_hpi.cpp  TA3D_hpi.h  UnitEngine.cpp  UnitEngine.h  backtrace.cpp  cError.h  cLogger.cpp  cLogger.h  cTA3D_Engine.cpp  cTA3D_Engine.h  cTAFileParser.cpp  cTAFileParser.h  cob.cpp  console.cpp  console.h  fbi.cpp  fbi.h  fx.cpp  fx.h  gaf.cpp  (+48 more)
src/: 3dmeditor.cpp  3dmeditor.h  3dmeditor_sub.cpp  3do.cpp  3do.h  3ds.cpp  3ds.h  CMakeLists.txt  Doxyfile.txt  EngineClass.cpp  EngineClass.h  Makefile  Makefile.am  Makefile.in  SocketClass.cpp  SocketClass.h  TA3D_Audio.cpp  TA3D_Audio.h  TA3D_Exception.cpp  TA3D_Exception.h  TA3D_NameSpace.cpp  TA3D_NameSpace.h  TA3D_Network.cpp  TA3D_Network.h  TA3D_hpi.cpp  TA3D_hpi.h  UnitEngine.cpp  UnitEngine.h  YuniProfileBuildTemplate.cmake  ai.cpp  backtrace.cpp  backtrace.h  broadcastsock.cpp  broadcastsock.h  cCriticalSection.cpp  cCriticalSection.h  cError.cpp  cLogger.cpp  cLogger.h  cTA3D_Engine.cpp  (+66 more)
src/3DMEditor/: 3DMEditor2.pro
src/3DMEditor/i18n/: 3dmeditor_en.ts  3dmeditor_fr.ts
src/3DMEditor/scripts/: smokeunit.lh  statechg.lh  template.lua
src/3DMEditor/shaders/: ambientoccluder.frag  ambientoccluder.vert  ambientocclusionmap.frag
src/3DMEditor/src/: 3ds.cpp  ambientocclusion.cpp  ambientocclusionthread.h  gfx.cpp  (+23 more)
src/ai/: CMakeLists.txt  ai.controller.cpp  ai.cpp  ai.h  pathfinding.cpp  weight.h
src/animator/: animator.cpp  animator.h  base.cpp
src/autotest/: string.cpp
src/converters/: obj.cpp
src/gfx/: CMakeLists.txt  font.cpp  font.h  fx.base.cpp  fx.base.h  fx.electric.cpp  fx.electric.h  fx.manager.cpp  fx.manager.h  fx.particle.cpp  fx.particle.h  gfx.cpp  gfx.h  gfx.toolkit.cpp  gfx.toolkit.h  gfxfont.cpp  glfunc.cpp  glfunc.h  shader.cpp  shader.h  texture.cpp  texture.h
src/ingame/: battle.cpp  battle.h  battle.init.cpp  battle.preflight.cpp  gamedata.cpp  gamedata.h  players.cpp  players.h  sidedata.cpp  sidedata.h
src/input/: CMakeLists.txt  keyboard.cpp  keyboard.h  mouse.h
src/jpeg/: dct.h  decode.cpp  encode.cpp  internal.h  ta3d_jpg.h
src/languages/: i18n.cpp  i18n.h
src/logs/: CMakeLists.txt  logs.cpp  logs.h  logs.hxx
src/misc/: CMakeLists.txt  application.cpp  camera.cpp  camera.h  files.cpp  files.h  hash_table.h  hashtable.hxx  interface.h  lzw.h  material.light.h  math.h  matrix.cpp  matrix.h  osinfo.cpp  paths.cpp  paths.h  rect.h  recttest.cpp  recttest.h  resources.cpp  resources.h  settings.cpp  string.cpp  string.h  superqueue.h  tdf.cpp  tdf.h  vector.cpp  vector.h
src/netserver/: netclient.lua  netserver.lua
src/network/: CMakeLists.txt  SocketClass.cpp  TA3D_Network.cpp  TA3D_Network.h  broadcastsock.cpp  netclient.cpp  netclient.h  network.cpp  network.h  networkutils.cpp  networkutils.h  socket.broadcast.h  socket.cpp  socket.tcp.cpp  socket.tcp.h  socket.udp.cpp  ta3dsock.cpp  ta3dsock.h  udpsock.cpp
src/scripts/: ai.script.cpp  ai.script.h  cob.h  cob.vm.cpp  cob.vm.h  draw.list.cpp  draw.list.h  lua.chunk.cpp  lua.chunk.h  lua.env.cpp  lua.env.h  lua.persist.cpp  lua.persist.h  lua.thread.cpp  lua.thread.h  script.cpp  script.data.h  script.h  script.interface.cpp  unit.script.cpp  unit.script.func.cpp  unit.script.h  unit.script.interface.cpp  unit.script.interface.h
src/sounds/: CMakeLists.txt  manager.cpp  manager.h
src/ta3d/: AUTHORS  CMakeLists.txt  ChangeLog  config.h.cmake  install-sh
src/threads/: CMakeLists.txt  cThread.cpp  mutex.cpp  mutex.h  thread.cpp  thread.h
trunk/: 3dmeditor.res  AUTHORS  CMakeLists.txt  INSTALL  NEWS  README  cmake_mingw32.sh  config.h.cmake  config_mingw32_dbg.sh  ta3d.res
trunk/ai/: ordinateur.ai
trunk/gui/: 3dmeditor_edit.tdf  3dmeditor_main.area  3dmeditor_menu.tdf  3dmeditor_painting.area  3dmeditor_painting.tdf  3dmeditor_surface.tdf  animator.tdf  ask_dialog.tdf  config_display.tdf  config_game.tdf  gamesetup.tdf  help.tdf  mapsetup.area  mdrn_config_display.tdf  mdrn_gamesetup.tdf  mdrn_hosting.tdf  mdrn_main.tdf  mdrn_playerstats.tdf  mdrn_solo.area  modern.skn  multimenu.area  multimenu.tdf  open_dialog.tdf  statistics.area
trunk/objects3d/: archimetal-archmetalC02.3dm  archipalms-palm04.3dm  armanac_dead.3do  armcroc.3do  crys-spire-crystalspire03.3dm  crys-spire-crystalspire04.3dm  crys-spire-crystalspire06.3dm  marsglyphs-metal02.3dm  towers-tower01.3dm
trunk/pictures/: 3dmeditor.xcf  green.tga
trunk/resources/: ta3d.res
trunk/scripts/: annihilation.lua  armestor.lua  armllt.lua  armmex.lua  armsolar.lua  armvp.lua  default.lua  exptype.h  signals.lh  smokeunit.h  smokeunit.lh  statechg.h  ta3d.h
trunk/shaders/: 3do_shadow.vert  water_reflec.frag  water_simulator.frag  water_simulator2.frag  water_simulator4.frag  water_simulator4.vert
trunk/sky/: day-sky2.tdf
trunk/src/: 3dmeditor.cpp  3dmeditor.h  3dmeditor_sub.cpp  3do.cpp  3do.h  3ds.cpp  CMakeLists.txt  EngineClass.cpp  EngineClass.h  Makefile.am  TA3D_Audio.cpp  TA3D_Audio.h  TA3D_Exception.cpp  TA3D_Exception.h  TA3D_NameSpace.cpp  TA3D_NameSpace.h  TA3D_Network.cpp  TA3D_Network.h  TA3D_Platform.h  TA3D_hpi.cpp  TA3D_hpi.h  UnitEngine.cpp  UnitEngine.h  YuniProfileBuildTemplate.cmake  backtrace.cpp  cCriticalSection.cpp  cCriticalSection.h  cInterface.h  cTA3D_Engine.cpp  cTAFileParser.cpp  cTAFileParser.h  cob.h  console.cpp  console.h  engine.h  fbi.cpp  fbi.h  fx.cpp  gaf.cpp  gaf.h  (+31 more)
(+4668 files in other folders)
